irpc-derive/tests/compile_fail/multiple_fields.rs
use irpc_derive::rpc_requests;

#[rpc_requests(Service, Msg)]
enum Enum {
    A(u8, u8),
}

fn main() {}